--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <title>Blog Post 3</title>
-<link rel="stylesheet" href="../static/my_style.css">
+<!-- <link rel="stylesheet" href="../static/my_style.css"> -->
 <nav>
   <h1>A Simple Message Bank</h1>
   <ul>
     <li><a href="{{ url_for('submit') }}">Submit a Message</a></li>
-    <li><a href="{{ url_for('view') }}">View Messages</a></li>
+    <!-- <li><a href="{{ url_for('view') }}">View Messages</a></li> -->
   </ul>
 </nav>
 <section class="content">
