--- a/templates/view.html
+++ b/templates/view.html
@@ -2,15 +2,16 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}View Messages{% endblock %}</h1>
+  <h1>{% block title %}Some Cool Messages{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-    <p> View some cool messages here!</p>
-
-    {% for m in random_messages %}
+    <!-- Looping over random (handle, message) pairs and displaying them -->
+    {% for m in rand_messages %}
       <br>
+      <!-- Displaying the message -->
       <b>{{m[1]}}</b>
-      <p style="font-style: italic; font-size: small;"> ~ {{m[0]}}</p>
+      <!-- Displaying the handle -->
+      <p style="font-style: italic; font-size: small; margin-top: 0%;"> ~ {{m[0]}}</p>
     {%  endfor %}
 {% endblock %}
