--- a/templates/submit.html
+++ b/templates/submit.html
@@ -6,18 +6,22 @@
 {% endblock %}
 
 {% block content %}
-    <!-- <p> Submit your message and handle here! It will be added to the message bank!</p> -->
+    <!-- Submit your message and handle here! It will be added to the message bank! -->
     <br>
     <form method="post">
+      <!-- Adding the message text box -->
       <label for="message">Your message:</label>
       <input type="text" name="message" id="message">
       <br>
+      <!-- Adding the handle text box -->
       <label for="handle">Your name or handle:</label>
       <input type="text" name="handle" id="handle">
       <br>
+      <!-- Adding the submit button -->
       <input type="submit" value="Submit message">
     </form>
 
+    <!-- Printing the thanks statement -->
     {% if thanks %}
       <b>Thank you for submitting a message!</b>
     {% endif %}
